--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "dependencies": {
     "express": "4.13.3",
-    "body-parser": "1.14.1"
+    "body-parser": "1.14.1",
+    "socket.io": "*"
   }
 }
