--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "express": "4.13.3",
     "body-parser": "1.14.1",
-    "socket.io": "*"
+    "socket.io": "*",
+    "webshot": "*"
   }
 }
